organize files and folders

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The New York Times</title>
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://g1.nyt.com/fonts/css/web-fonts.b1c035e4560e0216caf8f03326e0430712b61041.css">
-    <link rel="stylesheet" href="womencooking.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/womencooking.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 
@@ -518,9 +518,9 @@
 
     </section>
 
-    <script src="header.js"></script>
-    <script src="script.js"></script>
-    <script src="objectwoman.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/objectwoman.js"></script>
 
 </body>
 
