add logo on header

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -22,7 +22,9 @@
                     data
                 </div>
                 <div class="box-titulo">
-                    <h1>New York Times</h1>
+                    <a href="">
+                        <img src="statics/images/logo.svg" alt="logo" width="430" height="58.42">
+                    </a>
                 </div>
                 <div class="box-weather">
                     tempo
