Correção de Pastas e Arquivos

--- a/ny/group3/HTML/morenews.html
+++ b/ny/group3/HTML/morenews.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="morenews.css">
+    <link rel="stylesheet" href="/class2/ny/group3/CSS/morenews.css">
     <title>Grupo 03</title>
 </head>
 
@@ -28,7 +28,7 @@
                                 that warming increases humidity. It's also bad news for fire seasons.</span></a>
                     </div>
                     <div class="container__img">
-                        <a href="#"><img src="keagan-henman--ndLL94OKYA-unsplash.jpg" alt=""></a>
+                        <a href="#"><img src="/class2/ny/group3/Imagens/keagan-henman--ndLL94OKYA-unsplash.jpg" alt="Imagem de Seca"></a>
                     </div>
                     <div class="container__newsright">
                         <a href="#">
