--- a/ny/group3/HTML/hero.html
+++ b/ny/group3/HTML/hero.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="hero.css">
+    <link rel="stylesheet" href="/class2/ny/group3/CSS/hero.css">
     <title>Grupo 03</title>
 
 </head>
@@ -35,7 +35,7 @@
                 <a href="#">
                     <h4>Live Updates on the Primaries</h4>
                 </a>
-                <a href="#"><img src="marco-oriolesi-wqLGlhjr6Og-unsplash.jpg" alt="Imagem do Congresso"></a>
+                <a href="#"><img src="/class2/ny/group3/Imagens/marco-oriolesi-wqLGlhjr6Og-unsplash.jpg" alt="Imagem do Congresso"></a>
                 <div class="section1-notice-hero">
                     <a href="#"><span>Notícia 1 - Cruzeiro não é time</span></a>
                     <a href="#"><span>Notícia 2 - Palmeiras campeão do século</span></a>
