--- a/ny/group3/HTML/morenews.html
+++ b/ny/group3/HTML/morenews.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+    
     <main>
 
         <section id="section-3">
-            
+
             <div class="section-3__container">
                 <div class="container__title">
                     <a href="#">
@@ -21,59 +22,67 @@
                     </a>
                 </div>
 
-                <div class="container__article">
-                    <div class="container__newstop">
-                        <a href="#">
-                            <h3>Against Expectations, Southwestern Summers Are Getting Even Drier</h3>
-                        </a>
-                        <a href="#"><span>The finding by researchers runs counter to a basic tenet of climate change -
-                                that warming increases humidity. It's also bad news for fire seasons.</span></a>
-                    </div>
-                    <div class="container__img">
-                        <a href="#"><img src="/class2/ny/group3/Imagens/keagan-henman--ndLL94OKYA-unsplash.jpg" alt="Imagem de Seca"></a>
-                    </div>
-                    <div class="container__newsright">
-                        <a href="#">
+                <div class="container">
+                    <div class="container__article">
+                        <div class="container__newsleft">
+                            <a href="#">
+                                <h3>Against Expectations, Southwestern Summers Are Getting Even Drier</h3>
+                            </a>
+                            <a href="#"><span>The finding by researchers runs counter to a basic tenet of climate change -
+                                that warming increases humidity. It's also bad news for fire seasons.</span>
+                            </a>
+                        </div>
+
+                        <div class="container__img">
+                            <a href="#"><img src="/class2/ny/group3/Imagens/keagan-henman--ndLL94OKYA-unsplash.jpg" alt="Imagem de Seca"></a>
+                        </div>
+
+                        <div class="container__newsright">
+                            <a href="#">
                             <h3>Mark Peel, Who Helped Forge a New Culinary Path, Dies at 66</h3>
-                        </a>
-                        <a href="#"><span>A pillar of California's pioneering food scene, he worked at Spago and was a
-                                founder of the renowned Campanile and La Brea Bakery.</span></a>
-                    </div>
+                            </a>
+                            <a href="#"><span>A pillar of California's pioneering food scene, he worked at Spago and was a founder of the renowned Campanile and La Brea Bakery.</span>
+                            </a>
+                        </div>    
+
+                        <div class="container__breaknews">
+                            <div>
+                                <a href="#"><span>Connecticut Legalizes Recreational Marijuana</span></a>
+                            </div>
+                            <div>
+                                <a href="#"><span>Google Faces Fresh E.U. Inquiry Over Ad Technology</span></a>
+                            </div>
+                            <div>
+                                <a href="#"><span>European Soccer Says No to Pride Display at Munich Stadium</span></a>
+                            </div>
+                            <div>
+                                <a href="#"><span>Resistance Fighters Battle Myanmar's Military in Mandalay</span></a>
+                            </div>
+                            <div>
+                                <a href="#"><span>Man Charged With Stealing 21 Tons of Pistachios in California</span></a>
+                            </div>
+                        </div>
+
                     <div class="container__newsbot">
-                        <div>
+                        <div class="newsbot__right">
                             <a href="#">
                                 <h3>The Pandemic Stimulus Was Front-Loaded. That Could Mean a Bumpy Year.</h3>
                             </a>
-                            <a href="#"><span>There's a risk that the affluent, who saved money by limiting things like traveling and dining out, will sit on their cash rather than spend it.</span></a>
+                            <a href="#"><span>There's a risk that the affluent, who saved money by limiting things like traveling and dining out, will sit on their cash rather than spend it.</span>
+                            </a>
                         </div>
-                        <div>
+                        <div class="newsbot__left">
                             <a href="#">
                                 <h3>Home Sales Slow as Shortage and Climbing Prices Limit Buyers</h3>
                             </a>
-                            <a href="#"><span>Buyers continued to leave cities in search of more space and better work-from home scenarios, leading to a spike in demand. Here's the latest on the economy.</span></a>
+                            <a href="#"><span>Buyers continued to leave cities in search of more space and better work-from home scenarios, leading to a spike in demand. Here's the latest on the economy.</span>
+                            </a>
                         </div>
-                    </div>
-                </div>
-
-                <div class="container__breaknews">
-                    <div>
-                        <a href="#"><span>Connecticut Legalizes Recreational Marijuana</span></a>
-                    </div>
-                    <div>
-                        <a href="#"><span>Google Faces Fresh E.U. Inquiry Over Ad Technology</span></a>
-                    </div>
-                    <div>
-                        <a href="#"><span>European Soccer Says No to Pride Display at Munich Stadium</span></a>
-                    </div>
-                    <div>
-                        <a href="#"><span>Resistance Fighters Battle Myanmar's Military in Mandalay</span></a>
-                    </div>
-                    <div>
-                        <a href="#"><span>Man Charged With Stealing 21 Tons of Pistachios in California</span></a>
-                    </div>
-                </div>
-            </div>
+                    </div>                                 
+                </div> 
+            </div>                                                   
         </section>
+
     </main>
 
 </body>
