--- a/ny/group3/HTML/section-second.html
+++ b/ny/group3/HTML/section-second.html
@@ -84,21 +84,23 @@
                     </figure>
                 </div>
             </section>
-            <section class="c-section2">                
-                    <div class="c-live__row__item">
-                        <h2 class="c-title__new">Los Angeles Has a Housing Crisis. Can It Design Its Way Out?</h2>
-                        <span>As Angelenos grapple with ways to address affordable housing and homelessness, a new
+            <section class="c-section2">
+                <div class="c-live__row__item">
+                    <h2 class="c-title__new">Los Angeles Has a Housing Crisis. Can It Design Its Way Out?</h2>
+                    <span>As Angelenos grapple with ways to address affordable housing and homelessness, a new
+                        architecture
+                        competition looks to low-rise solutions, outr critic writes.</span>
+                </div>
+                <div class="c-live__row__item">
+                    <figure class="c-img">
+                        <img class="c-img__new-arc" src="img/architecture.jpg" alt="Architecture">
+                        <figcaption class="c-legend">Louisa Van Leer and Antonio Castillo won first place in an
                             architecture
-                            competition looks to low-rise solutions, outr critic writes.</span>
-                    </div>
-                    <div class="c-live__row__item">
-                        <figure class="c-img">
-                            <img class="c-img__new-arc" src="img/architecture.jpg" alt="Architecture">
-                            <figcaption class="c-legend">Louisa Van Leer and Antonio Castillo won first place in an architecture
-                                competition in Los Angeles for their “Green Alley Housing” proposal in the subdivision category. Louisa
-                                Van Leer Architecture</figcaption>
-                        </figure>
-                    </div>            
+                            competition in Los Angeles for their “Green Alley Housing” proposal in the subdivision
+                            category. Louisa
+                            Van Leer Architecture</figcaption>
+                    </figure>
+                </div>
             </section>
             <section class="c-section2">
                 <article class="c-new">
