--- a/ny/group3/HTML/morenews.html
+++ b/ny/group3/HTML/morenews.html
@@ -28,8 +28,7 @@
                             <a href="#">
                                 <h3>Against Expectations, Southwestern Summers Are Getting Even Drier</h3>
                             </a>
-                            <a href="#"><span>The finding by researchers runs counter to a basic tenet of climate change -
-                                that warming increases humidity. It's also bad news for fire seasons.</span>
+                            <a href="#"><span>The finding by researchers runs counter to a basic tenet of climate change - that warming increases humidity. It's also bad news for fire seasons.</span>
                             </a>
                         </div>
 
