--- a/ny/group3/HTML/hero.html
+++ b/ny/group3/HTML/hero.html
@@ -21,12 +21,10 @@
                     </span></a>
                 <ul>
                     <a href="#">
-                        <li>New Yorkers vote today in a mayoral race defined by clashes over public safety, the economy
-                            and ethics that turned ugle in the final stretch.</li>
+                        <li>New Yorkers vote today in a mayoral race defined by clashes over public safety, the economy and ethics that turned ugle in the final stretch.</li>
                     </a>
                     <a href="#">
-                        <li>It will be the city's first mayoral elections that uses ranked-choice voting, a system that
-                            may delay the declaration of a winner for weeks.</li>
+                        <li>It will be the city's first mayoral elections that uses ranked-choice voting, a system that may delay the declaration of a winner for weeks.</li>
                     </a>
                 </ul>
             </div>
@@ -47,18 +45,14 @@
             <div class="hero-section1__left">
                 <a class="section1__left--separation" href="#"><span>
                         <h3>How New Yorkers Feel About Ranked-Choice Voting</h3>
-                        <p>Voters are using a new system citywide for the first time, but many seemed characteristically
-                            unfazed: "It's real easy if people just learn how to read."</p>
+                        <p>Voters are using a new system citywide for the first time, but many seemed characteristically unfazed: "It's real easy if people just learn how to read."</p>
                     </span></a>
                 <a href="#"><span>
                         <h3>Read our New York Today newsletter for a guide to casting your ballot and navigating
                             ranked-choice voting.</h3>
-                        <p>Voters are using a new system citywide for the first time, but many seemed characteristically
-                            unfazed: "It's real easy if people just learn how to read."</p>
+                        <p>Voters are using a new system citywide for the first time, but many seemed characteristically unfazed: "It's real easy if people just learn how to read."</p>
                     </span></a>
             </div>
-
-
         </section>
     </main>
 
