--- a/ny/group2/index.html
+++ b/ny/group2/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/kingthingsspikeless_regular_macroman/stylesheet.css" type="text/css"
+        charset="utf-8" />
     <title>Project New York Times</title>
 </head>
 
