feature: add news-main and node_modules

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -187,10 +187,42 @@
 
         </div>
 
-
         <main>
+            <hr>
+            <div class="news-people">
+                <div class="people-1">
+                    <div>
+                        <h3 class="people__title">Socialist Candidate Stuns Longtime<br>Incumbent in Buffalo Mayor’s Race</h3>
+                        <p class="people__desc">
+                            India Walton, a progressive challenger<br>running her first campaign, is
+                            on track<br>to become the first socialist mayor of a<br>big city in 60 years.
+                        </p>
+                    </div>
+                    <div class="people__img"></div>
+                </div>
+                <div class="people-2">
+                    <div>
+                        <h3 class="people__title">Bragg Holds Lead in Manhattan<br>District Attorney Primary</h3>
+                        <p class="people__desc">
+                            If elected, Alvin Bragg, a former<br>federal prosecutor, 
+                            would be the first<br>Black person to hold the office.
+                        </p>
+                    </div>
+                    <div class="people__img"></div>
+                </div>
+                <div class="people-3">
+                    <div>
+                        <h3 class="people__title">Inside Eric Adams’s Complicated<br>Police Career (From June 19)</h3>
+                        <p class="people__desc">
+                            Mr. Adams’s police credentials have<br>helped him rise to the top of the New<br>
+                            York mayor’s race. But his relationship<br>with the department is complex.
+                        </p>
+                    </div>
+                    <div class="people__img"></div>
+                </div>
+            </div>
+            <hr>
             <div class="box-womens">
-                <hr>
                 <div>
                     <h2 class="womens-title">Women’s Health</h2>
                 </div>
@@ -209,12 +241,25 @@
                 </div>
             </div>
 
-            <div id="news">
+            <div class="topics-news">
+                <h2 class="topics__titles">NEWS</h2>   
+                <div id="news"></div>
+
+                <h2 class="topics__titles">OPINION</h2>   
+                <div id="opinion"></div>
+
+                <h2 class="topics__titles">ARTS</h2>   
+                <div id="arts"></div>
+
+                <h2 class="topics__titles">LIVING</h2>   
+                <div id="living"></div>
 
             </div>
 
-        </main>
+            
 
+        </main>
+        
         <footer>
             <a href="">
                 <img src="statics/images/logo.svg" alt="logo" width="184" height="44">
@@ -521,7 +566,7 @@
     </section>
 
     <script src="js/header.js"></script>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
     <script src="js/objectwoman.js"></script>
 
 </body>
