--- a/ny/group3/HTML/section-second.html
+++ b/ny/group3/HTML/section-second.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New York Times</title>
 
-    <link rel="stylesheet" href="css/second-section.css">
+    <link rel="stylesheet" href="../css/second-section.css">
 
 </head>
 
@@ -29,7 +29,7 @@
                 </article>
             </section>
             <section class="c-section2">
-                <article class="c-live c-live__row">
+                <article class="c-live">
                     <div class="c-live__row__item">
                         <h2 class="c-title__new">She Fought to Reopen Schools, BEcoming a Hero and a Villain</h2>
                         <span>The economist Emily Oster offers loads of data-driven advice about children and Codiv-19.
@@ -38,7 +38,7 @@
                     </div>
                     <div class="c-live__row__item">
                         <figure class="c-img">
-                            <img class="c-woman__flower" src="img/womanFlowers.jpg" alt="Woman">
+                            <img class="c-woman__flower" src="../Imagens/womanFlowers.jpg" alt="Woman">
                             <figcaption class="c-legend">Jillian Freyer for The New York Times</figcaption>
                         </figure>
                     </div>
@@ -52,7 +52,8 @@
                 </article>
             </section>
             <section class="c-section2">
-                <h3>While many people in the U.S. need persuading to get vaccinated, residents of South Texas need
+                <h3 class="c-title-new__h3">While many people in the U.S. need persuading to get vaccinated, residents
+                    of South Texas need
                     little
                     prodding.</h3>
             </section>
@@ -71,7 +72,7 @@
                 </div>
                 <div class="c-live__row__item">
                     <figure class="c-img">
-                        <img src="img/britney.jpg" class="c-img__new-britany"
+                        <img src="../Imagens/britney.jpg" class="c-img__new-britany"
                             alt="The relationshi btween Britney Spears">
                         <figcaption class="c-legend">The relationship between Britney Spears, right, and her father,
                             Jamie, is expected
@@ -92,8 +93,8 @@
                         competition looks to low-rise solutions, outr critic writes.</span>
                 </div>
                 <div class="c-live__row__item">
-                    <figure class="c-img">
-                        <img class="c-img__new-arc" src="img/architecture.jpg" alt="Architecture">
+                    <figure class="c-img c-img__right">
+                        <img class="c-img__new-arc" src="../Imagens/architecture.jpg" alt="Architecture">
                         <figcaption class="c-legend">Louisa Van Leer and Antonio Castillo won first place in an
                             architecture
                             competition in Los Angeles for their “Green Alley Housing” proposal in the subdivision
@@ -106,15 +107,16 @@
                 <article class="c-new">
                     <h3>The Great Read</h3>
                     <h2>An Engineer Says He's Cracked the Zodiac. Oline Sleuths Are Skeptical</h2>
-                    <span>Fayçal Ziraoui said he cracked ciphers attributed to the Zodiac killer and identified him,
+                    <p>Fayçal Ziraoui said he cracked ciphers attributed to the Zodiac killer and identified him,
                         causing
-                        an uproar and potentially ending a 50-yaer-old quest.</span>
-                    <span><strong>Lire en français.</strong></span>
+                        an uproar and potentially ending a 50-yaer-old quest.</p>
+                    <p class="c-new__bordertop"><strong>Lire en français.</strong></p>
                 </article>
                 <article class="c-new">
                     <figure class="c-img">
-                        <img src="img/men.jpg" alt="Man">
-                        <figcaption>“I was obsessed with it, 24 hours a day, that’s all I could think about,” said
+                        <img src="../Imagens/men.jpg" class="c-img_man" alt="Man">
+                        <figcaption class="c-legend">“I was obsessed with it, 24 hours a day, that’s all I could think
+                            about,” said
                             Fayçal
                             Ziraoui, referring to his efforts to crack the Zodiac killer case. James Hill for The New
                             York
@@ -123,76 +125,124 @@
                 </article>
             </section>
             <section class="c-section2">
-                <article class="c-new">
-                    <h2>Carl Nassib, the First openly Gay N.F.L. Player, Has Been a Football Everyman</h2>
-                    <span>"I've been meaning to do this for a while now," the lineman said of coming out. He comes from
-                        a
-                        football family and was a standout at Penn State.</span>
-                </article>
-                <article class="c-new">
-                    <figure class="c-img">
-                        <img src="img/football.jpg" alt="Football">
-                        <figcaption>Carl Nassib has played for three N.F.L. teams. Ethan Miller/Getty Images
-                        </figcaption>
-                    </figure>
-                </article>
+                <div class="c-live__row__item">
+                    <article class="c-new">
+                        <h2>Carl Nassib, the First openly Gay N.F.L. Player, Has Been a Football Everyman</h2>
+                        <span>"I've been meaning to do this for a while now," the lineman said of coming out. He comes
+                            from
+                            a
+                            football family and was a standout at Penn State.</span>
+                    </article>
+                </div>
+                <div class="c-live__row__item">
+                    <article class="c-new">
+                        <figure class="c-img c-img__right">
+                            <img src="../Imagens/football.jpg" class="c-img_football" alt="Football">
+                            <figcaption class="c-legend">Carl Nassib has played for three N.F.L. teams. Ethan
+                                Miller/Getty Images
+                            </figcaption>
+                        </figure>
+                    </article>
+                </div>
+                <div class="c-live__row__item"></div>
             </section>
         </div>
         <div class="c-opinion">
+
             <h3>Opinion</h3>
-            <article class="c-opinion__collumn">
+
+            <article class="c-column_news">
+                <div class="c-live__row__item column_opinions_item-top">
+                    <h3 class="author-name">Bryce Covert</h3>
+                    <h3 class="author-desc">Biden's Paid Leave Plan Is Years Out of Date</h3>
+                    <p class="desc-text">The presidente should look to his former rivals to improve his family and child
+                        care
+                        policies</p>
+                </div>
+                <div class="c-live__row__item column_opinions_item-top">
+                    <img src="../Imagens/biden.jpg" class="img-bidden" alt="Biden and children">
+                </div>
+            </article>
+            <div class="options__opinion">
+                <div class="column_opinions_item">
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Michelle Goldberg</h3>
+                        <h3 class="author-desc">Only the Women Can Save Us Now, New York</h3>
+                        <p class="desc-text">Both men leading the Democratic mayoral primary are disasters.</p>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Alexandra March</h3>
+                        <h3 class="author-desc">We Were Promised a Village: A Year in the Life of Pandemic-Baby Parents
+                        </h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Paul Krugman</h3>
+                        <h3 class="author-desc">The Week Inflaion Panic Died</h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Peter Beinart</h3>
+                        <h3 class="author-desc">'Rules-Based'? What Is Biden Talking About?</h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Bret Stephens</h3>
+                        <h3 class="author-desc">Iran Bets on Religion, Repression and Revolution</h3>
+                    </article>
+                </div>
+                <div class="column_opinions_item">
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">The Editorial Board</h3>
+                        <h3 class="author-desc">Kathryn Garcia Has Our Endorsement for New York City Mayor</h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Rob Richie</h3>
+                        <h3 class="author-desc">A Very Specific Guide to Ranking Candidates for N.Y.C Mayor</h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">'The Ezra Klein Show'</h3>
+                        <h3 class="author-desc">This Activist Thinks You Should Embrace</h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Dina Srinivasan</h3>
+                        <h3 class="author-desc">Google Is Dominationg This Hidden Market With No Rules</h3>
+                    </article>
+                    <article class="c-opinion__collumn">
+                        <h3 class="author-name">Kat O'Brien</h3>
+                        <h3 class="author-desc">I Am Breaking My Silence About</h3>
+                    </article>
+                </div>
+            </div>
+            <article class="c-column_editor">
+
+                <h3>Editor's Pick</h3>
+                <figure class="c-img">
+                    <img src="../Imagens/corcunda.png" class="c-img_corcunda" alt="Corcunda de Notredame">
+                    <figcaption class="c-legend">Disney
+                    </figcaption>
+                </figure>
+                <h3 class="c-title__new">'The Hunchback`at 25: 'The Most R-Rated G You Will Ever See'</h3>
+                <p>How did the ratings board overlook songs filled with lust and damnation? "Maybe we bamboozled them
+                    with gargoyles," one filmmaker said.</p>
 
             </article>
-            <article class="c-opinion__collumn">
-                <h3>Bryce Covert</h3>
-                <h3>Biden's Paid Leave Plan Is Years Out of Date</h3>
-                <span>The presidente should look to his former rivals to improve his family and child care
-                    policies</span>
-                <img src="img/biden.jpg" alt="Biden and children">
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Michelle Goldberg</h3>
-                <h3>Only the Women Can Save Us Now, New York</h3>
-                <span>Both men leading the Democratic mayoral primary are disasters.</span>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Alexandra March</h3>
-                <h3>We Were Promised a Village: A Year in the Life of Pandemic-Baby Parents</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Paul Krugman</h3>
-                <h3>The Week Inflaion Panic Died</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Peter Beinart</h3>
-                <h3>'Rules-Based'? What Is Biden Talking About?</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Bret Stephens</h3>
-                <h3>Iran Bets on Religion, Repression and Revolution</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>The Editorial Board</h3>
-                <h3>Kathryn Garcia Has Our Endorsement for New York City Mayor</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Rob Richie</h3>
-                <h3>A Very Specific Guide to Ranking Candidates for N.Y.C Mayor</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>'The Ezra Klein Show'</h3>
-                <h3>This Activist Thinks You Should Embrace</h3>
-            </article>
-            <article class="c-opinion__collumnn">
-                <h3>Dina Srinivasan</h3>
-                <h3>Google Is Dominationg This Hidden Market With No Rules</h3>
-            </article>
-            <article class="c-opinion__collumn">
-                <h3>Kat O'Brien</h3>
-                <h3>I Am Breaking My Silence About</h3>
-            </article>
+            <article class="opinion__final">
+
+                <div class="opinion__final_item">
+                    <figure class="c-img">
+                        <img src="../Imagens/cobra.png" class="c-final" alt="Cobra">
+                    </figure>
+                    <h3 class="c-title__new">For Moray Eels, a Sneaky Second Set of Jaws to Catch Prey</h3>
+                </div>
+                <div class="opinion__final_item">
+                    <figure class="c-img">
+                        <img src="../Imagens/cadeira.png" class="c-final" alt="Cadeira">
+                    </figure>
+                    <h3 class="c-title__new">The Most Popular Prime Day Deal (So Far)</h3>
+                </div>
         </div>
+        </article>
     </div>
+    </div>
+
 
     <script src="js/second-section.js"></script>
 </body>
