add more news section

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/games.css">
     <link rel="stylesheet" href="css/science.css">
     <link rel="stylesheet" href="css/midSection.css">
+    <link rel="stylesheet" href="css/more_news.css">
 </head>
 
 <body>
@@ -426,6 +427,98 @@
 
 
             </div>
+        </section>
+
+        <section class="more_news">
+            <h5>More News</h5>
+            <div class="mn_content_container">
+                <div class="mn_left_container">
+                    <div class="mn_first_row">
+                        <a href="#">
+                            <div class="fr_first_content">
+                                <h3 class="news_title">How Press Freedom Is Being Eroded in Hong Kong</h3>
+                                <p class="news_description">The forced closure of the pro-democracy Apple Daily
+                                    newspaper is
+                                    the latest worrisome sign for journalists in the Chinese territory.</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="fr_second_content">
+                                <h3 class="news_title">Benigno S. Aquino III, Former President of the Philippines, Dies
+                                </h3>
+                                <p class="news_description">A scion to the country’s most prominent pro-democracy
+                                    political
+                                    family, he was celebrated early in his administration for stabilizing the economy.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="mn_second_row">
+                        <a href="#">
+                            <div class="sr_first_content">
+                                <h3 class="news_title sr_small_title">A Mother and Son Are Found Murdered, Deepening a
+                                    Mystery in South
+                                    Carolina</h3>
+                                <p class="news_description">Officials opened a new investigation into an unsolved 2015
+                                    death
+                                    as a result of information gleaned after two members of a prominent family were
+                                    killed.
+                                </p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="sr_second_content">
+                                <img src="statics/images/home_delivery.svg" alt="" width="330">
+                                <p class="news_subtitle">Buster Murdaugh, center, received a hug during the funeral
+                                    service
+                                    for his brother, Paul, and mother, Maggie, in Hampton, S.C.</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="sr_third_content sr_small_title">
+                                <h3 class="news_title">‘Fire Monks’ Defend Tassajara Zen Monastery From Wildfire</h3>
+                                <p class="news_description">Eight monks protecting the Buddhist center near Big Sur,
+                                    Calif.,
+                                    are relying on training from professional firefighters and their Zen practice.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="mn_right_container">
+                    <a href="#" class="mn_link_title">
+                        <h3>
+                            Judge Blocks U.S. Debt Relief Program for Minority Farmers
+                        </h3>
+                    </a>
+                    <a href="#" class="mn_link_title">
+                        <h3>
+                            Biden Removes Chief of Housing Agency After Supreme Court Ruling
+                        </h3>
+                    </a>
+                    <a href="#" class="mn_link_title">
+                        <h3>
+                            General Pushes Back on G.O.P. Accusations of a ‘Woke’ Military
+                        </h3>
+                    </a>
+                    <a href="#" class="mn_link_title">
+                        <h3>
+                            Modest Rent Increases Approved for N.Y.C. Tenants
+                        </h3>
+                    </a>
+                    <a href="#" class="mn_link_title">
+                        <h3>
+                            BuzzFeed Is Said to Be Closing In on Deal to Go Public
+                        </h3>
+                    </a>
+                    <a href="#" class="mn_link_title">
+                        <h3>
+                            Iran Atomic Agency Says It Thwarted Attack on a Facility
+                        </h3>
+                    </a>
+                </div>
+
+            </div>
+
         </section>
 
         <main>
