--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Imagens/the_new_york_times_alt.ico" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/style.css">      
+    <link rel="stylesheet" href="/class2/ny/group3/CSS/style.css">      
     <title>The New York Times - Grupo 03</title>
 
 </head>
