--- a/ny/group3/HTML/popularinthetimes.html
+++ b/ny/group3/HTML/popularinthetimes.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Popular in The Times</title>
-    <link rel="stylesheet" href="/CSS/popular.css">
+    <link rel="stylesheet" href="/class2/ny/group3/CSS/popular.css">
 </head>
 <body>
     <hr>
-    <div>
+    <div class="title">
         <h3>Popular in The Times</h3>
     </div>
     <main>
@@ -19,7 +19,7 @@
                 <div class="noticias-britney">
                     <ul>
                         <a href="pag2.html">
-                            <img src="/Imagens/britney.jpg" alt="britney">
+                            <img src="/class2/ny/group3/Imagens/britney.jpg" alt="britney">
                             <li><strong>Britney Spears Quietly Pushed for years to End Her Conservatorship</strong></li>
                             <li class="paragrafo">Confidential court records obtained by The Times reveal that the singer has urged changes to the arrangement that controls her life, and her father's role in leading it.</li>
                         </a>
@@ -30,7 +30,7 @@
                 <div class="noticias-adams">
                     <ul>
                         <a href="pag2.html">
-                            <img src="/Imagens/Adams.jpeg" alt="Adams">
+                            <img src="/class2/ny/group3/Imagens/Adams.jpeg" alt="Adams">
                             <li><strong>Adams Leads in N.Y.C Mayoral Primary, but Ranked Choice Awaits</strong></li>
                             <li class="paragrafo">Voters on Tuesday took part in the city's first mayoral election using ranked-choice voting, a system that may delay the declaration of a winner until mid-July.</li>
                         </a>
@@ -40,7 +40,7 @@
                 <div class="noticias-woman">
                     <ul>
                         <a href="pag2.html">
-                            <img src="/Imagens/womanFlowers.jpg" alt="womanFlowers">
+                            <img src="/class2/ny/group3/Imagens/womanFlowers.jpg" alt="womanFlowers">
                             <li><strong>She Fought to Reopen Schools,Becoming a Hero and a Villain</strong></li>
                             <li class="paragrafo">The economist Emily Oster offers loads of data-driven advice about children and Covid-19.Many parents live by her words.Others say she's dangerous.</li>
                         </a>
@@ -50,7 +50,7 @@
                 <div class="chineses">
                     <ul>
                         <a href="pag2.html">
-                            <img src="/Imagens/chineses.jpeg" alt="chineses">
+                            <img src="/class2/ny/group3/Imagens/chineses.jpeg" alt="chineses">
                             <li><strong>They Relied on Chinese Vaccines.Now They're Battling Outbreaks.</strong></li>
                             <li class="paragrafo">More than 90 countries are using Covid shots from China.Experts say recent infections in those places should serve as a cautionary tale in the global effort to fight the disease.</li>
                         </a>
@@ -60,7 +60,7 @@
                 <div class="men">
                     <ul>
                         <a href="pag2.html">
-                            <img src="/Imagens/men.jpg" alt="men">
+                            <img src="/class2/ny/group3/Imagens/men.jpg" alt="men">
                             <li><strong>I've Cracked Zodiac, a French Engineer Says. Online Sleuths Are Skeptical.</strong></li>
                             <li class="paragrafo">Fayçal ZIraoui caused an online uproar after saying he had cracked unsolved ciphers attributed to the Zodiac killer in California and identified him,potentially ending a 50-year-old-quest.</li>
                         </a>
