--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -16,21 +16,10 @@
     <main id="main">
 
         <section id="Hero">
-            <div class="hero-section1__right">
-                <a href="#"><span>
-                        <h2>New Yorkers Vote in Acrimonious Mayoral Primary</h2>
-                    </span></a>
-                <ul>
-                    <a href="#">
-                        <li>New Yorkers vote today in a mayoral race defined by clashes over public safety, the economy
-                            and ethics that turned ugle in the final stretch.</li>
-                    </a>
-                    <a href="#">
-                        <li>It will be the city's first mayoral elections that uses ranked-choice voting, a system that
-                            may delay the declaration of a winner for weeks.</li>
-                    </a>
-                </ul>
+            <div id="section-rigth" class="hero-section1__right">
+
             </div>
+            
             <div class="section1-img-hero">
                 <a href="#">
                     <h4>Live Updates on the Primaries</h4>
@@ -42,19 +31,9 @@
                     <a href="#"><span>Notícia 3 - Despacito</span></a>
                 </div>
             </div>
-            <div class="hero-section1__left">
-                <a class="section1__left--separation" href="#"><span>
-                        <h3>How New Yorkers Feel About Ranked-Choice Voting</h3>
-                        <p>Voters are using a new system citywide for the first time, but many seemed characteristically
-                            unfazed: "It's real easy if people just learn how to read."</p>
-                    </span></a>
-                <a href="#"><span>
-                        <h3>Read our New York Today newsletter for a guide to casting your ballot and navigating
-                            ranked-choice voting.</h3>
-                        <p>Voters are using a new system citywide for the first time, but many seemed characteristically
-                            unfazed: "It's real easy if people just learn how to read."</p>
-                    </span>
-                </a>
+
+            <div id="section-left" class="hero-section1__left">
+                
             </div>
         </section>
 
@@ -565,7 +544,7 @@
         </section>
 
 
-    <section id="section-footer">
+        <section id="section-footer">
 
 
             <div>
