chore: passing hero to js

--- a/ny/group1/post.html
+++ b/ny/group1/post.html
@@ -16,9 +16,9 @@
             <div class="icons_container_header">
                 <img src="statics/images/menu.svg" width="16" height="16" alt="menu">
                 <img src="statics/images/search.svg" width="16" height="16" alt="search">
-                <a href="#">U.S.</a>
+                <a href="index.html">U.S.</a>
             </div>
-            <img width="196" height="26.5" src="statics/images/logo.svg" alt="logo">
+            <a href="index.html"><img width="196" height="26.5" src="statics/images/logo.svg" alt="logo"></a>
             <button id="btn_login">LOG IN</button>
         </header>
         <div class="content">
