--- a/ny/group3/HTML/section-second.html
+++ b/ny/group3/HTML/section-second.html
@@ -19,8 +19,7 @@
                     <h3 class="c-title__color">Live</h3>
                     <h2 class="c-title__new">Senate Voting Rights Bill Expected to Run Into Filibuster</h2>
                     <span class="c-desc">Democrats plan to call a test vote to try to advance a sweeping voting rights
-                        bill.
-                        They are all but certain to fail. Here's the latesd from Washington.</span>
+                        bill. They are all but certain to fail. Here's the latesd from Washington.</span>
                 </article>
                 <article class="c-live">
                     <h2 class="c-title__new">A large liberal super PAC will pour $20 million into voing rights efoorts
@@ -57,6 +56,7 @@
                     little
                     prodding.</h3>
             </section>
+            <!--até aqui-->
             <section class="c-section2">
 
                 <article class="c-other__link">
