--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -13,6 +13,78 @@
 
 <body>
 
+    <header class="header">
+        <nav>
+            <div>
+              <div class="header__top">
+                <a href="#" class="link"><p>U.S</p></a>
+                <a href="#" class="link"><p>INTERNATIONAL</p></a>
+                <a href="#" class="link"><p>CANADA</p></a>
+                <a href="#" class="link"><p>ESPAÑOL</p></a>
+                <a href="#" class="link"><p>中文</p></a>
+              </div>
+            </div>
+            <div class="header__top--title">
+              <a href="#" class="link"><h1>The New York Times</h1></a>
+            </div>
+            <div>
+              <hr>
+            </div>
+            <div class="header__top--bottom">
+              <a href="#" class="link"><p>World</p></a>
+              <a href="#" class="link"><p>U.S</p></a>
+              <a href="#" class="link"><p>Politics</p></a>
+              <a href="#" class="link"><p>N.Y</p></a>
+              <a href="#" class="link"><p>Business</p></a>
+              <a href="#" class="link"><p>Opinion</p></a>
+              <a href="#" class="link"><p>Tech</p></a>
+              <a href="#" class="link"><p>Science</p></a>
+              <a href="#" class="link"><p>Health</p></a>
+              <a href="#" class="link"><p>Sports</p></a>
+              <a href="#" class="link"><p>Arts</p></a>
+              <a href="#" class="link"><p>Books</p></a>
+              <a href="#" class="link"><p>Style</p></a>
+              <a href="#" class="link"><p>Food</p></a>
+              <a href="#" class="link"><p>Travel</p></a>
+              <a href="#" class="link"><p>Magazine</p></a>
+              <a href="#" class="link"><p>T Magazine</p></a>
+              <a href="#" class="link"><p>Real Estate</p></a>
+              <a href="#" class="link"><p>Video</p></a>
+            </div>
+        </nav>     
+        <div>
+          <hr>
+        </div>
+        <div>
+          <table class="body__top--tabela">
+            <td>
+              <div class="body__top">
+                <a href="#" class="link"><img class="body__img--top" src="../Imagens/listen.png" alt=""></a>
+                <Strong><a href="#" class="link"><p>Listen to ‘The Daily’</Strong><br>
+                  Policing and the New York mayoral race.</p></a>
+                <div class="body__vertical--top"></div>
+              </div>
+            </td>
+            <td>
+              <div class="body__top">
+                <a href="#" class="link"><img class="body__img--top" src="../Imagens/sway.jpg" alt=""></a>
+                <a href="#" class="link"><p><Strong>Opinion: Kara Swisher Interviews Anthony Fauci</Strong><br>
+                  America’s chief immunologist discusses the lab leak theory, emailing Mark Zuckerberg and more.</p></a>
+                <div class="body__vertical--top"></div>
+              </div>
+            </td>
+            <td>
+              <div class="body__top">
+                <a href="#" class="link"><img  class="body__img--top"src="../Imagens/dayx.jpeg"></a>
+                <a href="#" class="link"><p><Strong>Listen to ‘Day X’</Strong><br>
+                  Is there a shadow army trying to bring down the German government?</p></a>
+              </div>
+            </td>
+          </table>
+        </div>
+        <hr>
+    </header>
+
     <main id="main">
 
         <section id="Hero">
@@ -681,7 +753,7 @@
                 <p>Subscriptions</p>
             </div>
         </section>
-
+    </main>
  
     <script src="JS/main.js" type="module"></script>
 </body>
