--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -59,7 +59,7 @@
           <table class="body__top--tabela">
             <td>
               <div class="body__top">
-                <a href="#" class="link"><img class="body__img--top" src="../Imagens/listen.png" alt=""></a>
+                <a href="#" class="link"><img class="body__img--top" src="Imagens/listen.png" alt=""></a>
                 <Strong><a href="#" class="link"><p>Listen to ‘The Daily’</Strong><br>
                   Policing and the New York mayoral race.</p></a>
                 <div class="body__vertical--top"></div>
@@ -67,7 +67,7 @@
             </td>
             <td>
               <div class="body__top">
-                <a href="#" class="link"><img class="body__img--top" src="../Imagens/sway.jpg" alt=""></a>
+                <a href="#" class="link"><img class="body__img--top" src="Imagens/sway.jpg" alt=""></a>
                 <a href="#" class="link"><p><Strong>Opinion: Kara Swisher Interviews Anthony Fauci</Strong><br>
                   America’s chief immunologist discusses the lab leak theory, emailing Mark Zuckerberg and more.</p></a>
                 <div class="body__vertical--top"></div>
@@ -75,7 +75,7 @@
             </td>
             <td>
               <div class="body__top">
-                <a href="#" class="link"><img  class="body__img--top"src="../Imagens/dayx.jpeg"></a>
+                <a href="#" class="link"><img  class="body__img--top"src="Imagens/dayx.jpeg"></a>
                 <a href="#" class="link"><p><Strong>Listen to ‘Day X’</Strong><br>
                   Is there a shadow army trying to bring down the German government?</p></a>
               </div>
@@ -421,85 +421,8 @@
             </div>
 
             <section class="section-news">
-                <div class="news__container">
-                    <div class="container--first">
-                        <a href="#">
-                            <h5>World News</h5>
-                        </a>
-                        <a href="#"><img src="Imagens/news-police.jpg" alt="Policiais"></a>
-                        <ul>
-                            <li>
-                                <a href="#"><span>Protester Who Crashed Into Police Faces Hong Kong's First Security Law
-                                        Trial.</span></a>
-                            </li>
-                            <li>
-                                <a href="#"><span>'Forbidden Fruit': Apple Daily, Pro-Democracy Newspaper in Hong Kong,
-                                        is Forced to Close.</span></a>
-                            </li>
-                            <li>
-                                <a href="#"><span>In the West, the Looted Bronzes are museum Pieces. In Nigeria, 'They
-                                        are our Ancestors.</span></a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="container--second">
-                        <a href="#">
-                            <h5>U.S. News</h5>
-                        </a>
-                        <a href="#"><img src="Imagens/news-womanFlowers.jpg" alt="Mulher com Flores"></a>
-                        <ul>
-                            <li><a href="#"><span>She fought to reopen Schools, becoming a hero and a
-                                        Villain.</span></a></li>
-                            <li><a href="#"><span>California has a plan to pay the back rent for low-income tenants. All
-                                        of it.</span></a></li>
-                            <li><a href="#"><span>Many parts of the U.S. needed persuading to Get Vaccinated. Not south
-                                        Texas.</span></a></li>
-                        </ul>
-                    </div>
-
-                    <div class="container--third">
-                        <a href="#">
-                            <h5>U.S. Politics</h5>
-                        </a>
-                        <a href="#"><img src="Imagens/news-politic.jpg" alt="Soldados na Casa Branca"></a>
-                        <ul>
-                            <li><a href="#"><span>White House unveils strategy to combat domestic extremism.</span></a>
-                            </li>
-                            <li><a href="#"><span>Facing mounting pressure, Harris will travel to the southern border
-                                        friday.</span></a></li>
-                            <li><a href="#"><span>The White House is expected to extend the federal moratorium on
-                                        evictions for another month.</span></a></li>
-                        </ul>
-                    </div>
-
-                    <div class="container--fourth">
-                        <a href="#">
-                            <h5>New York</h5>
-                        </a>
-                        <a href="#"><img src="Imagens/news-election.png" alt="Imagens das eleições"></a>
-                        <ul>
-                            <li><a href="#"><span>New York primary election results.</span></a></li>
-                            <li><a href="#"><span>How Adams built diverse coalition that put him ahead in the Mayor's
-                                        race.</span></a></li>
-                            <li><a href="#"><span>N.Y.C. mayoral race highlights: Adams leads in early results over
-                                        Wiley and Garcia.</span></a></li>
-                        </ul>
-                    </div>
-
-                    <div class="container--five">
-                        <a href="#">
-                            <h5>Business</h5>
-                        </a>
-                        <a href="#"><img src="Imagens/news-meme.jpg" alt="Meme de mercado de ações"></a>
-                        <ul>
-                            <li><a href="#"><span>No end to whiplash in meme stocks, crypto and more.</span></a></li>
-                            <li><a href="#"><span>Your steak in more expensive, but battle ranchers are missing
-                                        out.</span></a></li>
-                            <li><a href="#"><span>Turn tech to your advantage in the New Hybrid workplace.</span></a>
-                            </li>
-                        </ul>
-                    </div>
+                <div id="news" class="news__container">
+                    
                 </div>
 
             </section>
