feature: add popular news

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -380,6 +380,10 @@
             <hr>
 
             <div class="topics-news">
+                <h2 class="topics__titles">Popular in The Times</h2>
+                <div id="pop"></div>
+                <hr><hr>
+
                 <h2 class="topics__titles">NEWS</h2>
                 <div id="news"></div>
 
