--- a/ny/group2/index.html
+++ b/ny/group2/index.html
@@ -91,7 +91,6 @@
     <main class="hero">
         <div class="first-page-news">
             <div class="principal-news">
-
             </div>
             <div class="live-updates">
                 <p class="live-updates__p">Live Updates on the Primaries</p>
@@ -128,48 +127,62 @@
                 <div class="live-updates-divider"></div>
             </div>
             <div class="some-other-news">
-                3
+
             </div>
         </div>
+        <div class="divider-medium"></div>
         <div class="live-news-opnion">
             <div class="live">
-                <h3>Live</h3>
+                <h4 class="live-h4">Live</h4>
                 <div class="live-new-first-row">
+                    <div class="live-news-first-row-col">
+
+                    </div>
+                    <div class="live-news-divider"></div>
+                    <div class="live-news-first-row-col2">
+
+                    </div>
+                </div>
+                <div class="live-big-col-divider"></div>
+                <div class="row-3">
+                    <div class="live-big-col">
+                        <div class="live-big-col-row-divider"></div>
+                    </div>
+                    <div class="live-small-col">
+                    </div>
+                </div>
+                <div class="third-section-news">
+                    <div class="third-section-one">Breatney Spears</div>
+                    <div>1</div>
+                    <div>2</div>
+                    <div class="third-section-two">Los Angeles</div>
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div class="third-section-three">The Greate</div>
+                    <div>1</div>
+                    <div>2</div>
+                    <div class="third-section-four">Carl</div>
                     <div>1</div>
                     <div>2</div>
                 </div>
-                <div class="live-big-col">
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
-                </div>
-                <div class="live-small-col">
-                    6
-                </div>
+
             </div>
+
+
+
             <div class="opnion">
+                <span class="opnion-divider"></span>
                 <h3>Opnion</h3>
                 <div class="opnion-first-row">
-                    <div>1</div>
-                    <div>2</div>
                 </div>
                 <div class="opnion-rows">
-                    <div>
-                        <div>1</div>
-                        <div>2</div>
-                        <div>3</div>
-                        <div>4</div>
-                        <div>5</div>
-                    </div>
-                    <div>
-                        <div>6</div>
-                        <div>7</div>
-                        <div>8</div>
-                        <div>9</div>
-                        <div>10</div>
-                    </div>
+                    <div class="left-side-opnions">
 
+                    </div>
+                    <div class="right-side-opnions">
 
+                    </div>
                 </div>
                 <div class="editors">
                     <h3>Editor's Picks</h3>
@@ -183,21 +196,7 @@
                 </div>
             </div>
         </div>
-        <div class="third-section-news">
-            <div class="third-section-one">Breatney Spears</div>
-            <div>1</div>
-            <div>2</div>
-            <div class="third-section-two">Los Angeles</div>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div class="third-section-three">The Greate</div>
-            <div>1</div>
-            <div>2</div>
-            <div class="third-section-four">Carl</div>
-            <div>1</div>
-            <div>2</div>
-        </div>
+
         <div class="more-news">
             <h3></h3>
             <div class="colum-one">
