--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header class="header">
+    <header id="topo" class="header">
         <nav>
             <div>
               <div class="header__top">
@@ -434,7 +434,7 @@
 
             <div>
                 <div class="Título">
-                    <a href="#">
+                    <a href="#topo">
                         <p>The New York Times</p>
                     </a>
                 </div>
