--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -408,18 +408,12 @@
 
                 <div class="container">
                     <div class="container__article">
-                        <div class="container__newsleft">
-                            <a href="HTML/pag2.html" target="_blank">
-                                <h3>Against Expectations, Southwestern Summers Are Getting Even Drier</h3>
-                            </a>
-                            <a href="#"><span>The finding by researchers runs counter to a basic tenet of climate change
-                                    - that warming increases humidity. It's also bad news for fire seasons.</span>
-                            </a>
+                        <div id="container__newsleft" class="container__newsleft">
+                            
                         </div>
 
-                        <div class="container__img">
-                            <a href="HTML/pag2.html" target="_blank"><img
-                                    src="Imagens/keagan-henman--ndLL94OKYA-unsplash.jpg" alt="Imagem de Seca"></a>
+                        <div id="container__img" class="container__img">
+                            
                         </div>
 
                         <div class="container__newsright">
