--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -485,6 +485,16 @@
             <section id="news" class="section-news">
 
             </section>
+
+            <section id="sports" class="section-news">
+
+            </section>
+            <section id="games" class="section-news">
+
+            </section>
+            <section id="worlds" class="section-news">
+
+            </section>
         </section>
 
 
