feature: add scroll in index.html

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -321,25 +321,25 @@
             <hr>
 
             <div class="topics-news">
-                <h2 class="topics__titles">Popular in The Times</h2>
+                <h2 class="topics__titles title__popular">Popular in The Times</h2>
                 <div id="pop"></div>
                 <hr><hr>
 
-                <h2 class="topics__titles">NEWS</h2>
+                <h2 class="topics__titles title__news">NEWS</h2>
                 <div id="news"></div>
 
-                <h2 class="topics__titles">OPINION</h2>
+                <h2 class="topics__titles title__opinion">OPINION</h2>
                 <div id="opinion"></div>
 
-                <h2 class="topics__titles">ARTS</h2>
+                <h2 class="topics__titles title__arts">ARTS</h2>
                 <div id="arts"></div>
 
-                <h2 class="topics__titles">LIVING</h2>
+                <h2 class="topics__titles title__living">LIVING</h2>
                 <div id="living"></div>
             </div>
         </main>
 
-        <footer>
+        <footer class="footer_hidden">
             <a href="post.html">
                 <img src="statics/images/logo.svg" alt="logo" width="184" height="44">
             </a>
@@ -431,10 +431,10 @@
                             <p>中文网</p>
                         </a>
                     </div>
-
+        
                 </div>
             </div>
-
+        
             <div class="footer_last_container">
                 <a class="footer_small_links" href="#">
                     <p>© 2021 The New York Times Company</p>
