--- a/ny/group2/index.html
+++ b/ny/group2/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="artsstyle.css">
-    <link rel="stylesheet" href="footer-style.css">
+    <link rel="stylesheet" href="css/artsstyle.css">
+    <link rel="stylesheet" href="css/footer-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap"
