chore: adding a single js file to the website

--- a/ny/group1/index.html
+++ b/ny/group1/index.html
@@ -394,18 +394,7 @@
         </footer>
 
     </section>
-
-    <script type="module" src="js/nav-bar.js"></script>
-    <script type="module" src="js/paid.js"></script>
-    <script type="module" src="js/script-science-feature.js"></script>
-    <script type="module" src="js/script-games-womens-cooking.js"></script>
-    <script src="js/header.js"></script>
-    <script type="module" src="js/hero.js"></script>
-    <script type="module" src="js/script.js"></script>
-    <script type="module" src="js/quotes.js"></script>
-    <script type="module" src="js/rightMid.js"></script>
-    <script type="module" src="js/footer.js"></script>
-    <script type="module" src="js/moreNews.js"></script>
+    <script type="module" src="js/all.js"></script>
 </body>
 
 </html>
